media/radarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  rules:
    - host: radarr.neils.house
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 7878
            path: /
            pathType: Prefix
